--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
       - 3000:3000
     volumes:
       - ./nextjs:/nextjs
+    environment:
+      - WATCHPACK_POLLING=true
     command: npm run dev
